fix(theme): make links more readable (#444)
* fix(theme): make links more readable

fixes #119

* Revert "fix(theme): make links more readable"

This reverts commit 96380643066b869c3939e00042a319e3d6d43137.

* fix(theme): make filter more obvious

--- a/Phonebook.Frontend/src/styles.scss
+++ b/Phonebook.Frontend/src/styles.scss
@@ -83,7 +83,7 @@ app-root {
 }
 
 .pb-pointer {
-  cursor: pointer;
+  cursor: pointer !important;
 }
 
 .pb-flex-row {
