--- a/Phonebook.Frontend/src/styles/themes.scss
+++ b/Phonebook.Frontend/src/styles/themes.scss
@@ -1,5 +1,4 @@
 // Define themes as described in this guide: https://material.angular.io/guide/theming
-@import 'src/app/shared/components/add-filter/add-filter.component.theme';
 @import 'src/app/shared/components/search/search.component.theme';
 @import 'src/app/shared/components/navigation/navigation.component.theme';
 @import 'src/app/modules/table/components/table/table.component.theme';
@@ -35,7 +34,6 @@
 
 @mixin custom-components-theme($theme) {
   @include search-component-theme($theme);
-  @include add-filter-component-theme($theme);
   @include user-list-component-theme($theme);
   @include global-theme($theme);
   @include navigation-component-theme($theme);
